[package]
name = "benchmark_xz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xz2 = "0.1"
lzma-rs = "0.2"
xz-decom = "0.2"
rust-lzma = "0.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
opt-level = 3

[profile.release]
debug = true